# yala

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  yala-config.cmake.in
include/yala/: constexpr_math.h  hello.h  matrix.h  matrix_vector.h  normal.h  vec.h
src/: hello.cpp
tests/: CMakeLists.txt  constexpr_math_tests.cpp  matrix_vector_tests.cpp  test_add.cpp
tests/matrix_tests/: CMakeLists.txt  matrix_tests.cpp
tests/normal_tests/: CMakeLists.txt  normal1_tests.cpp  normal2_tests.cpp  normal3_tests.cpp  normal4_tests.cpp  normal_tests.cpp
tests/vec_tests/: CMakeLists.txt  vec1_tests.cpp  vec2_tests.cpp  vec3_tests.cpp  vec4_tests.cpp  vec_tests.cpp
